--- a/projects/chess/index.html
+++ b/projects/chess/index.html
@@ -473,15 +473,16 @@
                 renderBoard(chessboardDiv, board, false);
             } else { // double board
                 boardContainer.classList.add('double-board-container'); // Add flex container styling
-                const blackChessboardDiv = createChessboardElement('chessboard-black', true); // This is for Black's view, and it's rotated
-                const whiteChessboardDiv = createChessboardElement('chessboard-white', false); // This is for White's view
+                // Create boards: left for White's perspective, right for Black's perspective
+                const whiteChessboardDiv = createChessboardElement('chessboard-white', false); // White's view (not rotated)
+                const blackChessboardDiv = createChessboardElement('chessboard-black', true); // Black's view (rotated)
                 
-                // Append black's board first (left), then white's board (right)
-                boardContainer.appendChild(blackChessboardDiv);
+                // Append white's board first (left), then black's board (right)
                 boardContainer.appendChild(whiteChessboardDiv);
+                boardContainer.appendChild(blackChessboardDiv);
 
-                renderBoard(blackChessboardDiv, board, true); // Render black's board with rotation logic
                 renderBoard(whiteChessboardDiv, board, false); // Render white's board without rotation logic
+                renderBoard(blackChessboardDiv, board, true); // Render black's board with rotation logic
             }
         }
 
