--- a/projects/chess/index.html
+++ b/projects/chess/index.html
@@ -179,10 +179,6 @@
             border-radius: 0; /* Square border for capture */
         }
 
-        .king-in-check {
-            background-color: #FFA500 !important; /* Orange for king in check */
-        }
-
         .king-in-checkmate {
             background-color: #ef4444 !important; /* Red for king in checkmate */
         }
@@ -477,16 +473,14 @@
                 renderBoard(chessboardDiv, board, false);
             } else { // double board
                 boardContainer.classList.add('double-board-container'); // Add flex container styling
-                // Create boards: left for White's perspective, right for Black's perspective
-                const whiteChessboardDiv = createChessboardElement('chessboard-white', false); // White's view (not rotated)
-                const blackChessboardDiv = createChessboardElement('chessboard-black', true); // Black's view (rotated)
+                const whiteChessboardDiv = createChessboardElement('chessboard-white', false);
+                const blackChessboardDiv = createChessboardElement('chessboard-black', true); // Rotated for black
                 
-                // Append white's board first (left), then black's board (right)
                 boardContainer.appendChild(whiteChessboardDiv);
                 boardContainer.appendChild(blackChessboardDiv);
 
-                renderBoard(whiteChessboardDiv, board, false); // Render white's board without rotation logic
-                renderBoard(blackChessboardDiv, board, true); // Render black's board with rotation logic
+                renderBoard(whiteChessboardDiv, board, false);
+                renderBoard(blackChessboardDiv, board, true);
             }
         }
 
@@ -503,10 +497,9 @@
         function renderBoard(targetDiv, currentBoard, isRotated) {
             targetDiv.innerHTML = ''; // Clear existing board in the target div
 
-            // Always iterate through rows and columns in standard order for data access.
-            // Visual rotation is handled by CSS on the board container and individual squares.
-            const rows = [0, 1, 2, 3, 4, 5, 6, 7];
-            const cols = [0, 1, 2, 3, 4, 5, 6, 7];
+            // Determine the iteration order based on rotation
+            const rows = isRotated ? [7, 6, 5, 4, 3, 2, 1, 0] : [0, 1, 2, 3, 4, 5, 6, 7];
+            const cols = isRotated ? [7, 6, 5, 4, 3, 2, 1, 0] : [0, 1, 2, 3, 4, 5, 6, 7];
 
             for (let r of rows) {
                 for (let c of cols) {
@@ -566,7 +559,21 @@
                     }
                 });
             });
-            // King highlighting is now handled exclusively by checkGameStatus
+
+            // Highlight king if in check
+            const kingColor = currentPlayer === 'white' ? 'wk' : 'bk';
+            const kingPosition = findKing(currentBoard, kingColor);
+            if (kingPosition && isKingInCheck(currentBoard, currentPlayer)) {
+                const [kingR, kingC] = kingPosition;
+                const boardsToHighlight = boardView === 'single' ? [document.getElementById('chessboard-single')] : [document.getElementById('chessboard-white'), document.getElementById('chessboard-black')];
+
+                boardsToHighlight.forEach(boardElem => {
+                    const kingSquare = boardElem.querySelector(`.square[data-row="${kingR}"][data-col="${kingC}"]`);
+                    if (kingSquare) {
+                        kingSquare.classList.add('king-in-checkmate');
+                    }
+                });
+            }
         }
 
         // --- Event Handling ---
@@ -857,33 +864,10 @@
             const playerWhoseTurnItIs = currentPlayer;
             const playerWhoJustMoved = currentPlayer === 'white' ? 'black' : 'white';
 
-            // --- Clear previous king highlights for both kings ---
-            // This needs to be done *after* drawBoard has recreated the squares
-            const allSquares = document.querySelectorAll('.square');
-            allSquares.forEach(square => {
-                square.classList.remove('king-in-check', 'king-in-checkmate');
-            });
-            // --- End clear previous king highlights ---
-
-
             const isPlayerWhoseTurnItIsInCheck = isKingInCheck(board, playerWhoseTurnItIs);
-            const kingPieceInCheck = playerWhoseTurnItIs === 'white' ? 'wk' : 'bk';
-            const kingPosition = findKing(board, kingPieceInCheck); // Get current player's king position
 
             if (isPlayerWhoseTurnItIsInCheck) {
                 playSound('check');
-                // Apply orange highlight for check
-                if (kingPosition) {
-                    const [kingR, kingC] = kingPosition;
-                    const boardsToHighlight = boardView === 'single' ? [document.getElementById('chessboard-single')] : [document.getElementById('chessboard-white'), document.getElementById('chessboard-black')];
-                    boardsToHighlight.forEach(boardElem => {
-                        const kingSquare = boardElem.querySelector(`.square[data-row="${kingR}"][data-col="${kingC}"]`);
-                        if (kingSquare) {
-                            kingSquare.classList.add('king-in-check'); // Apply orange for check
-                        }
-                    });
-                }
-
                 let hasLegalMoves = false;
                 for (let r = 0; r < 8; r++) {
                     for (let c = 0; c < 8; c++) {
@@ -898,22 +882,21 @@
                     if (hasLegalMoves) break;
                 }
 
-
                 if (!hasLegalMoves) {
                     isGameOver = true;
                     stopTimer();
                     playSound('mate');
                     updateStatus(`${capitalize(playerWhoseTurnItIs)} is checkmated! ${capitalize(playerWhoJustMoved)} wins!`);
-                    
-                    // For checkmate, remove orange and apply red
+                    const kingPieceInCheck = playerWhoseTurnItIs === 'white' ? 'wk' : 'bk';
+                    const kingPosition = findKing(board, kingPieceInCheck);
                     if (kingPosition) {
                         const [kingR, kingC] = kingPosition;
+                        // Highlight king on both boards if double view
                         const boardsToHighlight = boardView === 'single' ? [document.getElementById('chessboard-single')] : [document.getElementById('chessboard-white'), document.getElementById('chessboard-black')];
                         boardsToHighlight.forEach(boardElem => {
                             const kingSquare = boardElem.querySelector(`.square[data-row="${kingR}"][data-col="${kingC}"]`);
                             if (kingSquare) {
-                                kingSquare.classList.remove('king-in-check'); // Remove orange
-                                kingSquare.classList.add('king-in-checkmate'); // Add red for checkmate
+                                kingSquare.classList.add('king-in-checkmate');
                             }
                         });
                     }
