--- a/projects/chess/index.html
+++ b/projects/chess/index.html
@@ -473,14 +473,16 @@
                 renderBoard(chessboardDiv, board, false);
             } else { // double board
                 boardContainer.classList.add('double-board-container'); // Add flex container styling
-                const whiteChessboardDiv = createChessboardElement('chessboard-white', false);
-                const blackChessboardDiv = createChessboardElement('chessboard-black', true); // Rotated for black
+                // Create boards: left for White's perspective, right for Black's perspective
+                const whiteChessboardDiv = createChessboardElement('chessboard-white', false); // White's view (not rotated)
+                const blackChessboardDiv = createChessboardElement('chessboard-black', true); // Black's view (rotated)
                 
+                // Append white's board first (left), then black's board (right)
                 boardContainer.appendChild(whiteChessboardDiv);
                 boardContainer.appendChild(blackChessboardDiv);
 
-                renderBoard(whiteChessboardDiv, board, false);
-                renderBoard(blackChessboardDiv, board, true);
+                renderBoard(whiteChessboardDiv, board, false); // Render white's board without rotation logic
+                renderBoard(blackChessboardDiv, board, true); // Render black's board with rotation logic
             }
         }
 
@@ -497,9 +499,10 @@
         function renderBoard(targetDiv, currentBoard, isRotated) {
             targetDiv.innerHTML = ''; // Clear existing board in the target div
 
-            // Determine the iteration order based on rotation
-            const rows = isRotated ? [7, 6, 5, 4, 3, 2, 1, 0] : [0, 1, 2, 3, 4, 5, 6, 7];
-            const cols = isRotated ? [7, 6, 5, 4, 3, 2, 1, 0] : [0, 1, 2, 3, 4, 5, 6, 7];
+            // Always iterate through rows and columns in standard order for data access.
+            // Visual rotation is handled by CSS on the board container and individual squares.
+            const rows = [0, 1, 2, 3, 4, 5, 6, 7];
+            const cols = [0, 1, 2, 3, 4, 5, 6, 7];
 
             for (let r of rows) {
                 for (let c of cols) {
